<resources>
    <string name="app_name">TFT - Trance Festival Ticker</string>
    <string name="actualYear">2018</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to draw the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">Um die Routen funktion der App zu nutzen zu können, muss die Berechtigung auf Ihren aktuellen Standort gesetz sein. Bitte versuchen Sie erneut die Berechtigung zu setzten.\nWenn die Berechtigung abgelehnt wurde, kann diese jederzeit in den System Einstellungen &gt; Apps &gt; \'\' geändert werden.</string>
    <string name="storage_permission_denied">Die VR Elemente benötigen die Berechtigung auf die SD Karte zu schreiben. Bitte versuchen Sie erneut die Berechtigung zu setzen.\nWenn die Berechtigung abgelehnt wurde, kann diese jederzeit in den System Einstellungen &gt; Apps &gt; \'\' geändert werden.</string>
    <string name="permission_required_toast">Ohne  die nötige Berechtigung, ist die folgende Funktion nicht benutzbar. Bitte ändern Sie dies in den Einstellungen der App.</string>

    <string name="devnik.trancefestivalticker.preference_map_car_route" />
    <string name="devnik.trancefestivalticker.preference_need_tour_guide" />
    <string name="devnik.trancefestivalticker.preference_last_sync" />
    <string name="devnik.trancefestivalticker.preference_whats_new_done" />

    <string name="devnik.trancefestivalticker.account_name" />

    <string name="sync_account_type">devnik.trancefestivalticker</string>

    <string name="content_authority">devnik.trancefestivalticker.provider</string>
    <string name="policy_url">http://webapps.niklas-grieger.de/TFTApp/policy.html</string>
    <string name="credits_text"><![CDATA[<p>Entwickler: Niklas Grieger<p>
                                         <p>Die Texte und Bilder sind in zusammenarbeit mit dem Beitreiber der Seite <i>goazin.de</i> entstanden</p>
                                         <br>
                                         <p>Bei Fragen oder Anregungen kannst du mich unter der email Adresse trancefestivalticker@gmail.com erreichen.</p>
                                         <br>
                                         <p>Die Webseite (goazin.de) auf der du noch weitere Infos, wie z.B. diverse Erfahrungsberichte und Interviews, findest du <a href="http://goazin.de/">hier</a></p>]]></string>
    <string name="organizer_text"><![CDATA[<p>Möchten sie auch, dass Ihre Veranstaltung in dieser App angezeigt wird? Garkein Problem. Sie haben folgende Möglichkeiten:<p>
                                         <br>
                                         <p>1. Sie schicken mir eine Mail an "trancefestivalticker@gmail.com" mit folgenden Infos:</p>
                                         <br>
                                            <ul>
                                                <li> Name der Veranstaltung</li>
                                                <li> Auflistung der Music Genres die vorkommen werden</li>
                                                <li> Ihre Vorverkauf Ticket Phasen (Sobald eine nächste Ticketphase beginnt, benötige ich zeitnah eine meldung dazu)</li>
                                                <li> Der Start und Ende Zeitpunkt</li>
                                                <li> Eine knappe Beschreibung der Veranstaltung (optional), am besten im HTML format</li>
                                                <li> Eine Homepage und/oder Ticket URL (beides optional)</li>
                                                <li> Ort der Veranstaltung (Längen und Breitengrade. Siehe Google Maps)</li>
                                                <li> Bilder, inkl. Titel und Beschreibung für die Galerie (als Bilddatei oder als URL (bevorzugt))</li>
                                            </ul>
                                         <br>
                                         <p>2. Ich lege Ihnen einen Account an und Sie pflegen die Informationen selbständig über ein Web Formular</p>
                                         <br>
                                         <p>Bei sonstigen fragen können Sie mich natürlich auch gerne über die eMail Adresse "trancefestivalticker@gmail.com" kontaktieren.</p>]]></string>
    <string name="faq_text"><![CDATA[<p>Hast du ein Problem mit der App oder hast eine Frage? Dann findest du hier eventuell eine Antwort!<p>
                                         <br>
                                         <p>1. Problem: Du bekommst bei dem 360° Grad Video / Bild nur ein Schwarz angezeigt, das Medium wird nicht korrekt dargestellt oder du bekommst nur die Fehlermeldung "Video Fehlerhaft. Oops!" angezeigt. </p>
                                         <p>Mögliche Gründe:</p>
                                         <br>
                                            <ul>
                                                <li>Ein unterbrochener Download des Videos. Bitte versuche es erneut herunterzuladen.</li>
                                                <li> Diese funktion ist noch sehr unausgereift, deshalb kann es sein das dein Handy die Funktion aktuell nicht unterstützt. </li>
                                                <li> Deine Android Version ist zu niedrig. Tipp: Führe regelmäßig Softwareupdates durch.
                                                     Bsp: Beim Samsung S7 Edge kannst du unter "Einstellungen->Software Update" checken ob du die aktuellste Version besitzt.</li>
                                            </ul>
                                         <br>
                                         <br>
                                         <p>Bei sonstigen fragen oder auch fehlermeldungen kannst du mich natürlich auch gerne über die eMail Adresse "trancefestivalticker@gmail.com" kontaktieren.</p>]]></string>
    <string name="vr_video_ask_download">
        <![CDATA[<p>Es wird empfohlen, dass folgende Video herunterzuladen. Unter anderem aus folgenden Gründen:</p>
                 <br>
                 <ul>
                    <li>Das Video ist in zukunft offline abrufbar</li>
                    <li>Bessere Peformance</li>
                 </ul>
                 <br>
                 <p>Außerdem wird empfohlen, falls möglich, vor dem download WLAN zu aktivieren, damit das mobile Datenvolumen geschont wird</p>
                 <br>
                 <p>Alternativ kann das Video auch gestreamt werden. Die Geschwindigkeit hängt von der Internetverbindung ab</p>]]>
    </string>
    <string name="vr_video_download_failed">
        <![CDATA[<p>Das Video ist fehlerhaft. Dies kann mehrere Gründe haben:</p>
                 <br>
                 <ul>
                    <li>Du hast den Download frühzeitig abgebrochen</li>
                    <li>Deine Internet Verbindung war nicht stabil genug</li>
                    <li>Dein Handy unterstützt das Format (360°) des Videos nicht.</li>
                 </ul>
                 <br>
                 <p>Starte den Download erneut. Und nochmal der Hinweis: Aktiviere, falls möglich, vor dem download das WLAN, damit das mobile Datenvolumen geschont wird</p>
                 <p>Alternativ kann das Video auch gestreamt werden. Die Geschwindigkeit hängt von der Internetverbindung ab</a>
        ]]>
    </string>

    <string name="rating_title">Was hälst du von der App ?</string>
    <string name="rating_message">Wenn dir die App gefällt, nimm dir bitte kurz Zeit und bewerte die App. Es dauert keine Minute. Danke für dein Support!</string>
    <string name="rating_button_yes">Bewerte</string>
    <string name="rating_button_no">Nein</string>
    <string name="rating_button_cancel">Später</string>

    <string name="last_sync">Letzte Synchronisation: %1$s</string>

    <!--VR VIDEO-->
    <string name="enter_vr_label">Enter VR mode</string>
    <string name="exit_vr_label">Exit VR mode</string>
    <string name="pause_label">Pause video</string>
    <string name="permission_warning">This app will not run without permission to read from storage. Click to enable permission.</string>
    <string name="play_label">Play video</string>
    <string name="loading_video">Loading Video…</string>
    <string name="vr_video_volume_toggle">VR video volume toggle</string>
    <string name="waiting">…</string>

    <!--Festival Detail-->
    <string name="title_not_found">Title not found</string>
    <string name="datum">Datum</string>
    <string name="date_not_found">Date not found</string>
    <string name="homepage_url_not_found">Homepage not found</string>
    <string name="ticket_price_unknown">Price not found</string>
    <string name="evtl_abendkasse">Evtl. Abendkasse</string>
    <string name="ticket_url_not_found">Ticket page not found</string>
    <string name="description_not_found">Description not found</string>
    <string name="description_placeholder_text">
        <![CDATA[
            <p>Noch kein Text vorhanden</p>
            <br>
            <br>
            <p>Falls du bei dem Festival warst und einen Erfahrungsbericht schreiben möchtest und dich hier verewigen möchtest, kannst du dies gerne tun und mir eine Mail zukommen lassen unter trancefestivalticker@gmail.com. Ich würde mich freuen :)</p>
        ]]>
    </string>
    <string name="image">Image</string>
    <string name="show_guide">show guide</string>
    <string name="impressum">Impressum</string>
    <string name="sonstiges">Sonstiges</string>
    <string name="sind_sie_ein_veranstalter">Sind sie ein Veranstalter?</string>
    <string name="faq">FAQ</string>
    <string name="letzte_nderungen">Letzte Änderungen</string>
    <string name="ticket">Ticket</string>
    <string name="festival_date_placeholder">%1$s - %2$s %3$s</string>
</resources>
