<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity">
    <item
        android:title="@string/show_guide"
        android:id="@+id/action_show_tour_guide"
        android:icon="@drawable/ic_help_outline_white_24dp"
        app:showAsAction="ifRoom"/>
    <group>
        <item
            android:id="@+id/menu_policy"
            android:title="@string/impressum"/>
        <item
            android:id="@+id/menu_credits"
            android:title="@string/sonstiges"/>
        <item
            android:id="@+id/menu_organizer"
            android:title="@string/sind_sie_ein_veranstalter"/>
        <item
            android:id="@+id/menu_faq"
            android:title="@string/faq"/>
        <item
            android:id="@+id/whats_new"
            android:title="@string/letzte_nderungen"/>
    </group>

</menu>